...
        setupConstraints()
    }
    
    func setupHourLabel() {
        let font = UIFont.systemFont(ofSize: 13)
        hourLabel = UILabel(font: font, textAlignment: .natural, textColor: .black)
        hourLabel.accessibilityIdentifier = "nextDays-hour"
    }
    
    func setupForecastImage() {
        forecastImage = UIImageView()
    }
    
    func setupTemperatureLabel() {
        let font = UIFont.systemFont(ofSize: 13)
        temperatureLabel = UILabel(font: font, textAlignment: .natural, textColor: .black)
        temperatureLabel.accessibilityIdentifier = "nextDays-temperature"
    }
}


//MARK: - Constraints Zone
private extension NextDaysForecastCollectionViewCell {
...
